--- a/web/index.html
+++ b/web/index.html
@@ -40,12 +40,22 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <!-- <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", function () {
+        // navigator.serviceWorker.register("/flutter_service_worker.js");
+        navigator.serviceWorker.register("./firebase-messaging-sw.js");
+      });
+    }
+    </script> -->
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
+        entrypointUrl: "/main.dart.js",
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
+          serviceWorkerUrl: "./firebase-messaging-sw.js",
         }
       }).then(function(engineInitializer) {
         return engineInitializer.initializeEngine();
@@ -54,5 +64,16 @@
       });
     });
   </script>
+  <!-- <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener("load", function () {
+        navigator.serviceWorker.register("firebase-messaging-sw.js");
+      });
+    
+      window.addEventListener('flutter-first-frame', function () {
+        navigator.serviceWorker.register('flutter_service_worker.js');
+      });
+    }
+  </script> -->
 </body>
 </html>
